# invenio-i18n

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-i18n-tests.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull-base.yml  i18n-pull.yml  i18n-push-base.yml  i18n-push.yml  pypi-release.yml  tests.yml
.github/workflows/reusable/: i18n-pull.yml  i18n-push.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  make.bat  usage.rst
examples/: app-setup.sh  app-teardown.sh  app.py
examples/templates/invenio_i18n/: page.html
examples/translations/da/LC_MESSAGES/: messages.po
examples/translations/en/LC_MESSAGES/: messages.po
examples/translations/es/LC_MESSAGES/: messages.po
invenio_i18n/: __init__.py  _compat.py  babel.py  bundles.py  cli.py  config.py  ext.py  jinja2.py  proxies.py  selectors.py  utils.py  version.py  views.py  webpack.py
invenio_i18n/assets/bootstrap3/js/invenio_i18n/: app.js
invenio_i18n/assets/js/invenio_i18n/: app.js
invenio_i18n/assets/semantic-ui/js/invenio_i18n/: app.js
invenio_i18n/collections/: collect.py  convert.py  discovery.py  io.py  merge.py  validate.py
invenio_i18n/static/js/invenio_i18n/: angularLangSelector.js
invenio_i18n/templates/invenio_i18n/macros/: language_selector.html
invenio_i18n/templates/semantic-ui/invenio_i18n/macros/: language_selector.html
invenio_i18n/translation_utilities/: __init__.py  collect.py  convert.py  discovery.py  io.py  validate.py
invenio_i18n/translations/: messages.pot
invenio_i18n/translations/af/LC_MESSAGES/: messages.po
invenio_i18n/translations/ar/LC_MESSAGES/: messages.po
invenio_i18n/translations/bg/LC_MESSAGES/: messages.po
invenio_i18n/translations/ca/LC_MESSAGES/: messages.po
invenio_i18n/translations/cs/LC_MESSAGES/: messages.po
invenio_i18n/translations/da/LC_MESSAGES/: messages.po
invenio_i18n/translations/de/LC_MESSAGES/: messages.po
invenio_i18n/translations/el/LC_MESSAGES/: messages.po
invenio_i18n/translations/en/LC_MESSAGES/: messages.po
invenio_i18n/translations/es/LC_MESSAGES/: messages.po
invenio_i18n/translations/et/LC_MESSAGES/: messages.po
invenio_i18n/translations/et_EE/LC_MESSAGES/: messages.po
invenio_i18n/translations/fa/LC_MESSAGES/: messages.po
invenio_i18n/translations/fi/LC_MESSAGES/: messages.po
invenio_i18n/translations/fr/LC_MESSAGES/: messages.po
invenio_i18n/translations/gl/LC_MESSAGES/: messages.po
invenio_i18n/translations/hr/LC_MESSAGES/: messages.po
invenio_i18n/translations/hu/LC_MESSAGES/: messages.po
invenio_i18n/translations/it/LC_MESSAGES/: messages.po
invenio_i18n/translations/ja/LC_MESSAGES/: messages.po
invenio_i18n/translations/ka/LC_MESSAGES/: messages.po
invenio_i18n/translations/ko/LC_MESSAGES/: messages.po
invenio_i18n/translations/lt/LC_MESSAGES/: messages.po
invenio_i18n/translations/no/LC_MESSAGES/: messages.po
invenio_i18n/translations/pl/LC_MESSAGES/: messages.po
invenio_i18n/translations/pt/LC_MESSAGES/: messages.po
invenio_i18n/translations/ro/LC_MESSAGES/: messages.po
invenio_i18n/translations/ru/LC_MESSAGES/: messages.po
invenio_i18n/translations/rw/LC_MESSAGES/: messages.po
invenio_i18n/translations/sk/LC_MESSAGES/: messages.po
invenio_i18n/translations/sv/LC_MESSAGES/: messages.po
invenio_i18n/translations/tr/LC_MESSAGES/: messages.po
invenio_i18n/translations/uk/LC_MESSAGES/: messages.po
invenio_i18n/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_i18n/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_i18n/translations/zh_TW/LC_MESSAGES/: messages.po
tests/: conftest.py  test_babel.py  test_examples_app.py  test_invenio_i18n.py  test_invenio_i18n_selectors.py  test_update_translation.py  test_validation_utilities.py  test_views.py
tests/translations/da/LC_MESSAGES/: messages.po
tests/translations/en/LC_MESSAGES/: messages.po
