# SPDX-FileCopyrightText: 2015-2022 CERN.
# SPDX-FileCopyrightText: 2016 TIND.
# SPDX-FileCopyrightText: 2022-2025 Graz University of Technology.
# SPDX-FileCopyrightText: 2025 TUBITAK ULAKBIM.
# SPDX-FileCopyrightText: 2025 University of Münster.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-i18n"
description = "Invenio internationalization (I18N) module."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "i18n",
  "internationalization",
  "invenio",
  "l10n",
  "localization",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "babel>=2.8",
  "flask-babel>=3.0.0",
  "invenio-base>=2.3.0,<3.0.0",
  "polib>=1.2.0",
  "pytz<2024.2",
  "rich-click>=1.7.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-i18n"

[project.entry-points."flask.commands"]
i18n = "invenio_i18n.cli:i18n"

[project.entry-points."invenio_assets.webpack"]
invenio_i18n = "invenio_i18n.webpack:i18n"

[project.entry-points."invenio_base.api_apps"]
invenio_i18n = "invenio_i18n:InvenioI18N"

[project.entry-points."invenio_base.apps"]
invenio_i18n = "invenio_i18n:InvenioI18N"

[project.entry-points."invenio_base.blueprints"]
invenio_i18n = "invenio_i18n.views:create_blueprint_from_app"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_i18n"

[project.optional-dependencies]
tests = [
  "flask-login>=0.6.2",
  "invenio-assets>=4.0.0,<5.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=3.0.0,<4.0.0",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_i18n/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_i18n/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_i18n/translations/messages.pot"
output_dir = "invenio_i18n/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_i18n/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_i18n",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_i18n --cov-report=term-missing'
filterwarnings = [
  "ignore::pytest.PytestDeprecationWarning",
  "ignore::pytest.PytestWarning",
]
testpaths = "tests invenio_i18n"
live_server_scope = "module"
