# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2022 CERN.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-i18n
version = attr: invenio_i18n.__version__
description = Invenio internationalization (I18N) module.
long_description = file: README.rst, CHANGES.rst
keywords = invenio internationalization i18n localization l10n
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-i18n
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Babel>=2.8
    Flask-BabelEx>=0.9.4
    invenio-base>=1.2.11

[options.extras_require]
tests =
    invenio-accounts[postgresql,mysql]>=1.4.13
    pytest-invenio>=1.4.6
    Sphinx>=4.2.0

[options.entry_points]
invenio_base.apps =
    invenio_i18n = invenio_i18n:InvenioI18N
invenio_base.api_apps =
    invenio_i18n = invenio_i18n:InvenioI18N
invenio_base.blueprints =
    invenio_i18n = invenio_i18n.views:create_blueprint_from_app
invenio_i18n.translations =
    messages = invenio_i18n
invenio_assets.webpack =
    invenio_i18n = invenio_i18n.webpack:i18n

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_i18n/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_i18n/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_i18n/translations/messages.pot
output-dir = invenio_i18n/translations/

[update_catalog]
input-file = invenio_i18n/translations/messages.pot
output-dir = invenio_i18n/translations/

[pycodestyle]
exclude = docs/conf.py
max-line-length = 82

[pydocstyle]
add_ignore = D401
